@@ -284,6 +284,8 @@
                         --add-exports fx/org.unigrid.janus.model.external=jersey.common
                         --add-exports fx/org.unigrid.janus.model.external=org.update4j
                         --add-exports fx/org.unigrid.janus.model.external=ALL-UNNAMED
+			--add-exports fx/org.unigrid.janus.jqwik=ALL-UNNAMED
+			--add-exports fx/org.unigrid.janus.jqwik.fx=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
